# linkfield

./: Cargo.toml  build.rs  linkfield.rc
docs/: idiomatic_review.md
src/: app.rs  args.rs  db.rs  file_cache.rs  ignore.rs  lib.rs  main.rs  move_heuristics.rs  platform.rs  watcher.rs  windows_registry.rs
src/file_cache/: cache.rs  db.rs  meta.rs  mod.rs
tests/: basic.rs  batch.rs  integration_file_cache_commit.rs  multimap.rs  mvcc.rs  redb_demo.rs  savepoint.rs  sequential_scan.rs  stats.rs  writer_contention.rs  zero_copy.rs
tests/redb_demo/: basic.rs  batch.rs  multimap.rs  mvcc.rs  savepoint.rs  stats.rs  writer_contention.rs  zero_copy.rs
