[package]
name = "linkfield"
version = "0.1.0"
edition = "2024"

[build-dependencies]
embed-resource = "3.0.4"

[dependencies]
redb = "2.6.0"
winreg = "0.55"
notify = "8"
notify-debouncer-full = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
bincode = "2.0.1"
rayon = "1.10.0"

[dev-dependencies]
tempfile = "3.20.0"
