[package]
name = "linkfield"
version = "0.1.0"
edition = "2024"

[build-dependencies]
embed-resource = "3.0.4"

[dependencies]
redb = "2.6.0"
notify = "8"
notify-debouncer-full = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
bincode = "2.0.1"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
indicatif = "0.17.11"
ignore = "0.4.23"
slotmap = "1.0.7"

[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_Shell",
]

[dev-dependencies]
tempfile = "3.20.0"
